# astron.libcxx

./: CMakeLists.txt  README.md
doc/guides/: ConnectingInternallyWithoutAnObjectRepository.md  ConnectingWithoutAnObjectRepository.md  CreateASimpleAI.md  CreateASimpleUberdog.md  CreatingASimpleUberdog.md
src/: AstronConnection.cpp
src/client/: ClientConnection.cpp  ClientConnection.h  ClientMessages.h  ClientRepository.h
src/connection/: ClientConnection.h  Connection.h  InternalConnection.h  NetworkClient.cpp
src/internal/: InternalConnection.cpp  InternalConnection.h  InternalMessages.h  InternalRepository.cpp  InternalRepository.h  Shard.h
src/messages/: clientMessages.h  internalMessages.h  types.h
src/objects/: DistributedObject.cpp  DistributedObject.h  ObjectFactory.cpp  ObjectFactory.h  ObjectRepository.cpp  ObjectRepository.h
src/repository/: ClientRepository.h  DistributedObject.h  InternalRepository.h  ObjectFactory.h  ObjectRepository.h
src/util/: Connection.cpp  Connection.h  Datagram.h  DatagramIterator.h  NetworkClient.cpp  NetworkClient.h  types.h
test/: common.py  test_client.py  test_core.py  test_internal.py
